syntax = "proto3";

package tasks;

message Task {
  string id = 1;   
  string title = 2;       
  string description = 3; 
  bool completed = 4;    
  string createdAt = 5;   
  string updatedAt = 6;  
}


message CreateTaskRequest {
  string title = 1;
  string description = 2;
}


message CreateTaskResponse {
  Task task = 1; 
}

message GetTasksRequest {}


message GetTasksResponse {
  repeated Task tasks = 1;
}


message GetTaskByIdRequest {
  string id = 1;
}


message GetTaskByIdResponse {
  Task task = 1; 
}


message UpdateTaskRequest {
  string id = 1;
  
  optional string title = 2;
  optional string description = 3;
  optional bool completed = 4;
}


message UpdateTaskResponse {
  Task task = 1; 
}


message DeleteTaskRequest {
  string id = 1;
}


message DeleteTaskResponse {
  bool success = 1;
}


service TaskService {
  
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);

  
  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse);

  
  rpc GetTaskById (GetTaskByIdRequest) returns (GetTaskByIdResponse);

  
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);

  
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}